--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,14 @@
 # This is the official list of authors for copyright purposes.
 # This file is distinct from the CONTRIBUTORS files.
+# See the latter for an explanation.
 
 # Names should be added to this file as one of
 #     Organization's name
 #     Individual's name <submission email address>
 #     Individual's name <submission email address> <email2> <emailN>
+# See CONTRIBUTORS for the meaning of multiple email addresses.
 
-Mizux Seiha <mizux.dev@gmail.com>
+# Please keep the list sorted.
 Google LLC
 Derek Quam <quam_derek@cat.com>
+Mizux Seiha <mizux.dev@gmail.com>
